--- a/app/src/main/res/layout/fragment_new_entry.xml
+++ b/app/src/main/res/layout/fragment_new_entry.xml
@@ -35,79 +35,274 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mealNameWrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="40dp"
-            android:ems="10"
-            android:hint="Name des Gerichtes"
+            android:hint="@string/meal_name_hint"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cameraButton" />
+            app:layout_constraintTop_toBottomOf="@+id/cameraButton"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="40dp"
+            >
 
-        <EditText
-            android:id="@+id/editTextTextMultiLine"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mealName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mealDescriptionWrapper"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="40dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="Beschreibung"
+            android:hint="@string/meal_description_hint"
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+            app:layout_constraintTop_toBottomOf="@+id/mealNameWrapper"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="40dp"
+            android:ems="10"
+            android:gravity="top|start"
+            >
 
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mealDescription"
+                android:gravity="top|start"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+<!--        <Button-->
+<!--            android:id="@+id/filterButtonDummy"-->
 <!--            style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
-<!--            app:backgroundTint="@android:color/holo_orange_dark"-->
-        <Button
-            android:id="@+id/filterButtonDummy"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="50dp"
-            android:insetLeft="0dp"
-            android:insetTop="0dp"
-            android:insetRight="0dp"
-            android:insetBottom="0dp"
-            android:padding="0dp"
-            app:icon="@drawable/ic_baseline_fastfood_24"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="24dp"
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_marginTop="50dp"-->
+<!--            android:insetLeft="0dp"-->
+<!--            android:insetTop="0dp"-->
+<!--            android:insetRight="0dp"-->
+<!--            android:insetBottom="0dp"-->
+<!--            android:padding="0dp"-->
+<!--            app:icon="@drawable/ic_baseline_fastfood_24"-->
+<!--            app:iconGravity="textStart"-->
+<!--            app:iconPadding="0dp"-->
+<!--            app:iconSize="24dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/mealDescriptionWrapper"-->
+<!--            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"-->
+<!--            />-->
+
+        <!--        <com.google.android.material.button.MaterialButton-->
+<!--            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_marginTop="50dp"-->
+<!--            android:insetLeft="0dp"-->
+<!--            android:insetTop="0dp"-->
+<!--            android:insetRight="0dp"-->
+<!--            android:insetBottom="0dp"-->
+<!--            android:padding="0dp"-->
+<!--            app:icon="@drawable/ic_baseline_fastfood_24"-->
+<!--            app:iconGravity="textStart"-->
+<!--            app:iconPadding="0dp"-->
+<!--            app:iconSize="24dp"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/filterButtonDummy"-->
+<!--            app:layout_constraintHorizontal_bias="0.305"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/mealDescriptionWrapper"-->
+<!--            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />-->
+
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/submitEntryBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/mealDescriptionWrapper"
+            app:layout_constraintVertical_bias="0.368"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:columnCount="4"
+            android:rowCount="2"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            >
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton1"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton2"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton3"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton4"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton5"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton6"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton7"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton8"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:layout_margin="10dp"
+                app:backgroundTint="@drawable/btn_toggle_background"
+                app:icon="@drawable/leaf"
+                app:iconPadding="0dp"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                />
+
+        </GridLayout>
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-            android:layout_width="50dp"
+            android:id="@+id/submitEntryBtn"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="152dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
             android:padding="0dp"
-            app:icon="@drawable/ic_baseline_fastfood_24"
+            app:icon="@drawable/ic_baseline_check_24"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
-            app:iconSize="24dp"
-            app:layout_constraintEnd_toStartOf="@+id/filterButtonDummy"
-            app:layout_constraintHorizontal_bias="0.305"
+            app:iconSize="36dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+            app:layout_constraintTop_toBottomOf="@+id/mealDescriptionWrapper"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
