--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -4,6 +4,10 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+    <style name="ShapeAppearanceOverlay.MyApp.Button.Rounded" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">20%</item>
+    </style>
     <style name="ButtonStyle" parent="">
         <item name="color">@color/black</item>
         <item name="backgroundColor">@color/purple_200</item>
