--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <paths xmlns:android="http://schemas.android.com/apk/res/android">
-        <external-files-path name="my_images" path="Pictures" />
-    </paths>
-</PreferenceScreen>
+<paths>
+    <external-files-path name="my_images" path="Pictures" />
+<!--    <cache-path-->
+<!--        name="cached_files"-->
+<!--        path="." />-->
+<!--    <files-path-->
+<!--        name="images"-->
+<!--        path="." />-->
+</paths>
