--- a/app/src/main/res/layout/fragment_new_entry.xml
+++ b/app/src/main/res/layout/fragment_new_entry.xml
@@ -128,167 +128,253 @@
 <!--            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />-->
 
         <GridLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/filterButtonGrid"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/submitEntryBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mealDescriptionWrapper"
-            app:layout_constraintVertical_bias="0.368"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
+            android:layout_marginTop="10dp"
             android:columnCount="4"
-            android:rowCount="2"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            >
+            android:rowCount="3"
+            app:layout_constraintBottom_toTopOf="@+id/submitEntryBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mealDescriptionWrapper"
+            app:layout_constraintVertical_bias="0.0">
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/fishButton"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                app:icon="@drawable/fisch_neutral"
+                app:iconPadding="0dp"
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton1"
+                android:id="@+id/lactoseButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/laktose_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton2"
+                android:id="@+id/proteinButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
+
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/proteinreich_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton3"
+                android:id="@+id/nutsButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
+
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/schalenfruechte_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton4"
+                android:id="@+id/hotButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/scharf_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton5"
+                android:id="@+id/porkButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/schwein_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton6"
+                android:id="@+id/soyButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/soja_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton7"
+                android:id="@+id/veganButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/vegan_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton8"
+                android:id="@+id/vegetarianButton"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_column="1"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
                 android:insetBottom="0dp"
                 android:padding="0dp"
-                android:layout_margin="10dp"
-                app:backgroundTint="@drawable/btn_toggle_background"
-                app:icon="@drawable/leaf"
+                app:icon="@drawable/vegetarisch_neutral"
                 app:iconPadding="0dp"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
-                />
+                app:iconTint="@null"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/wheatButton"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_column="2"
+                android:layout_margin="15dp"
+                android:checkable="true"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                app:icon="@drawable/weizen_neutral"
+                app:iconPadding="0dp"
+                app:iconTint="@null"
+                app:layout_constraintBottom_toTopOf="@+id/submitEntryBtn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/filterButtonGrid"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
+
 
         </GridLayout>
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/datePicker"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            app:icon="@drawable/ic_baseline_calendar_month_24"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            app:iconSize="30dp"
+
+            app:layout_constraintBottom_toTopOf="@+id/submitEntryBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/filterButtonGrid">
+
+        </com.google.android.material.button.MaterialButton>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/timePicker"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            app:icon="@drawable/ic_baseline_watch_later_24"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            app:iconSize="30dp"
+
+            app:layout_constraintBottom_toTopOf="@+id/submitEntryBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/filterButtonGrid">
+
+        </com.google.android.material.button.MaterialButton>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/submitEntryBtn"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_marginTop="152dp"
+            android:layout_marginTop="150dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -301,7 +387,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mealDescriptionWrapper"
+            app:layout_constraintTop_toBottomOf="@+id/filterButtonGrid"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
