--- a/app/src/main/res/layout/fragment_new_entry.xml
+++ b/app/src/main/res/layout/fragment_new_entry.xml
@@ -135,7 +135,6 @@
             android:layout_marginEnd="40dp"
             android:layout_marginTop="10dp"
             android:columnCount="4"
-            android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:rowCount="3"
             app:layout_constraintBottom_toTopOf="@+id/submitEntryBtn"
@@ -150,7 +149,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
@@ -167,7 +166,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
@@ -184,7 +183,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
 
                 android:checkable="true"
                 android:insetLeft="0dp"
@@ -202,7 +201,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
 
                 android:checkable="true"
                 android:insetLeft="0dp"
@@ -220,7 +219,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
@@ -237,7 +236,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
@@ -254,7 +253,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
@@ -271,7 +270,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
@@ -288,7 +287,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:layout_column="1"
                 android:checkable="true"
                 android:insetLeft="0dp"
@@ -307,7 +306,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_column="2"
-                android:layout_margin="15dp"
+                android:layout_margin="12dp"
                 android:checkable="true"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
@@ -375,6 +374,7 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_marginTop="150dp"
+            android:layout_marginBottom="20dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -384,6 +384,7 @@
             app:iconGravity="textStart"
             app:iconPadding="0dp"
             app:iconSize="36dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
